# spotify.rs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/: albums.rs  artists.rs  authorization.rs  authorization_successful.html  categories.rs  error.rs  genres.rs  lib.rs  local_authentication.rs  markets.rs  object_formatting.rs  objects.rs  player.rs  playlist.rs  spotify.rs  srequest.rs  tracks.rs  users.rs
src/albums/: album_endpoints.rs  album_objects.rs  mod.rs
src/artists/: artist_objects.rs  mod.rs
src/authentication/: auth_errors.rs  auth_objects.rs  mod.rs  pkce_auth.rs  pkce_auth_objects.rs
src/requests/: mod.rs  request_errors.rs  srequest.rs
src/tracks/: mod.rs  track_objects.rs
src/utils/: endpoint_helpers.rs  mod.rs
tests/: album_object_tests.rs  authorization_test.rs  formatting_test.rs  general_test.rs
