[package]
name = "spotifyrs"
version = "0.3.0-beta.4"
edition = "2021"
description = "A Rust-built wrapper for the Spotify Web API that focuses on consistent and reliable developer interaction with the many objects in the API (artists, tracks, etc)"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
querystring = "1.1"
dotenv = "0.15"
getrandom = {version = "0.2"}
base64 = "0.13"
sha2 = "0.10"
random-string = "1.0"
open = {version = "3.0", optional = true}
urlencoding = "2.1"
json = "0.12"
chrono = "0.4"
serde_json = "^1.0"
surf = {version = "2.3.2", default-features = false, optional = true}
serde = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["surf", "surf/default"]
local_auth = ["dep:open"]
wasm = ["surf/wasm-client", "getrandom/js"]
