[package]
name = "spotifyrs"
version = "0.3.0-beta.5"
edition = "2021"
description = "A Rust-built wrapper for the Spotify Web API that focuses on consistent and reliable developer interaction with consistent use of the Rust type system."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
chrono = "0.4"
querystring = "1.1"
random-string = "1.1"
urlencoding = "2.1"
getrandom = "0.2" # needs js featured enabled from user to use wasm32-unknown-unknown target
base64 = "0.21"
sha2 = "0.10"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
dotenv = "0.15"
tiny_http = {version = "0.12", optional = true}
open = {version = "5.0", optional = true}

[dev-dependencies]
tokio-test = "0.4"
tiny_http = "0.12"
open = "5.0"

[features]
local_auth = ["dep:tiny_http", "dep:open"]
